src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_not_str.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = "a"

if v != "a" { "err" } else { "ok" }

OK
"ok"
