src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_type_mismatch_nil.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = 1

if v != nil { "ok" } else { "err" }

OK
"ok"
