src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__import_call.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
import foo from "test"

print(foo())

OK
Nil

STDOUT
"hello"
