src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__import_call_state.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
import {reset, inc, dec, get} from "test2"

reset()
print(get())
inc(1)
print(get())
dec(1)
print(get())
}

OK
Nil

STDOUT
0
1
0
