src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__import_in_top_level_fn.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
import {foo} from "test"

fn test() {
  foo()
}

test()

OK
"hello"
