src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__index_assign_op_var_to_expr.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let o = {a:0}
fn k() { "a" }
let v = 1
o[k()] = o[k()] + v
o[k()] += v

o["a"]

OK
Int(2)
