src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__invert_float_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = 1.0
do {-v}
}

OK
Float(-1.0)
