src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__list_iter_empty.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
// Iteration over an empty list should immediately return nil
let list = []
let iter = list_iter(list)

assert_eq(iter(), nil)
assert_eq(iter(), nil)

OK
Nil
